--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -346,7 +346,8 @@ section.portfolio .flex {
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
-    margin: 10px
+    margin: 10px;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 /* ESTILO DO FORMULÁRIO DE CONTATO */
@@ -367,13 +368,13 @@ form {
 form input,
 form textarea {
     width: 100%;
-    background-color: var(--cor-primaria);
+    background-color: var(--cor-quiternaria);
     border: 0;
     outline: 0;
     padding: 20px 15px;
     border-radius: 15px;
-    color: #fff;
-    font-size: 18px;
+    color: #000000;
+    font-size: 15px;
 }
 
 input::placeholder,
@@ -384,7 +385,7 @@ textarea::placeholder {
 form textarea {
     resize: none;
     max-height: 400px;
-    ;
+    scrollbar-color: var(--cor-terciaria) var(--cor-quiternaria);
 }
 
 form .btn-enviar {
@@ -394,7 +395,7 @@ form .btn-enviar {
 
 form .btn-enviar input {
     width: 120px;
-    background-color: var(--cor-primaria);
+    background-color: var(--cor-quiternaria);
     color: var(--cor-secundaria);
     font-weight: 700;
     cursor: pointer;
