--- a/base_templates/global/partials/_head.html
+++ b/base_templates/global/partials/_head.html
@@ -10,6 +10,6 @@
 <!-- BOOTSTRAP ICONS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <!-- FIM BOOTSTRAP ICONS -->
-<link rel="stylesheet" href="{% static "global/css/style.css" %}}">
+<link rel="stylesheet" href="{% static "global/css/style.css" %}">
 
 <title>PortfolioIwerson</title>
