--- a/base_templates/global/partials/_main.html
+++ b/base_templates/global/partials/_main.html
@@ -19,7 +19,7 @@
         <h2 class="titulo">MEUS <span>PROJETOS.</span></h2>
         <div class="flex">
             <div class="card-projetos">
-                <img src="images/decodificador.png" alt="Descrição da imagem">
+                <img src="media/images/decodificador.png" alt="Descrição da imagem">
                 <div class="card-projetos-body">
                     <h3>Título do Card</h3>
                     <p>Texto do Card</p>
@@ -38,7 +38,7 @@
     <div class="interface">
         <div class="flex">
             <div class="img-sobre">
-                <img src="images/Iwerson_C.jpeg" alt="">
+                <img src="media/images/Iwerson_C.jpeg" alt="">
             </div><!--img-sobre-->
 
             <div class="txt-sobre">
@@ -48,6 +48,7 @@
                     Além disso, tenho habilidade em análise de dados, o que me permite contribuir de forma significativa para projetos que envolvam a manipulação e interpretação de dados.<br>                            
                     Estou ansioso para aplicar minhas habilidades e conhecimentos em um ambiente de trabalho desafiador e colaborativo, onde posso continuar a aprender e crescer profissionalmente. 
                     </p>
+                    <a href="media/pdfs/curriculo_iwerson.pdf" ><button class="btn-sobre" >curriculo</i></button></a>
             </div><!--txt-sobre-->
         </div><!--flex-->
     </div><!--interface-->
@@ -89,7 +90,7 @@
             <div class="especialidades-box dropdown_dropdownItemContainer__Uye51">
                 <button class="dropdown__toggle">Outros</button>
                 <div class="dropdown__menu">
-                    <a class="dropdown__item">Docker/a>
+                    <a class="dropdown__item">Docker</a>
                     <a class="dropdown__item">excel</a>
                     <a class="dropdown__item">Ciencia de dados</a>
                 </div>
