--- a/base_templates/global/partials/_header.html
+++ b/base_templates/global/partials/_header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="interface">
         <div class="titulo">
-            <a href="http://127.0.0.1:5500/index.html">
+            <a href="{% url 'contact:index' %}">
                 <p>&lt;Iwerson/&gt;</p>
             </a>
         </div><!--logo-->
