--- a/base_templates/global/partials/_main.html
+++ b/base_templates/global/partials/_main.html
@@ -105,10 +105,11 @@
     <div class="interface">
         <h2 class="titulo">FALA <span>COMIGO.</span></h2>
 
-        <form action="">
-            <input type="text" name="" id="" placeholder="Seu nome completo:" required>
-            <input type="text" name="" id="" placeholder="Seu e-mail:" required>
-            <textarea name="" id="" placeholder="Sua mensagem" required></textarea>
+        <form id="form-contato" action="{% url 'contact:enviar_email' %}" method="POST">
+            {% csrf_token %}
+            <input type="text" name="nome" id="nome" placeholder="Seu nome completo:" required>
+            <input type="email" name="email" id="email" placeholder="Seu e-mail:" required>
+            <textarea name="mensagem" id="mensagem" placeholder="Sua mensagem" required></textarea>
             <div class="btn-enviar"><input type="submit" value="ENVIAR"></div>
         </form>
     </div><!--interface-->
